<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhysicsQs"
    android:background="#AEA6E0FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvscore"
            android:text="@string/scoree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/tvscrnum"
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="19sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/c_question"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:backgroundTint="#03A9F4"
        android:layout_below="@+id/ll"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/questions"
                android:textSize="20sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c_question"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_margin="50dp">

        <RadioButton
            android:id="@+id/op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:checked="false"
            />

        <RadioButton
            android:id="@+id/op2"
            android:text="@string/option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/op3"
            android:text="@string/option_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RadioButton
            android:id="@+id/op4"
            android:text="@string/option_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

    </RadioGroup>


    <Button
        android:id="@+id/btnnext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_options"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:backgroundTint="#03A9F4"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnleave"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnnext"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#03A9F4"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/leave"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        />


</RelativeLayout>

