<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEA6E0FA"
    tools:context=".Result">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvresults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/results"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold|italic" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:backgroundTint="#03A9F4"
        android:layout_below="@+id/ll"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/tv_correctans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:layout_marginTop="60dp"
                android:textAlignment="center"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/tv_incorectans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_answers"
                android:layout_below="@+id/tv_correctans"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textSize="25sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>






    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_below="@+id/cardview"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/remarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        android:layout_below="@+id/tv_total"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnhome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remarks"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#03A9F4"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>


</RelativeLayout>

