<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:layout_marginTop="48dp"
        android:textSize="60sp"
        android:gravity="center"
        android:textColor="#03A9F4" />
    <ImageView
        android:id="@+id/imghome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvwelcome"
        android:src="@drawable/home"/>

    <Button
        android:id="@+id/btn"
        android:text="@string/start_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imghome"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/black"
        android:textSize="29sp" />
    <Button
        android:id="@+id/btnselect"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn"
        android:layout_marginTop="10dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/select"
        android:textColor="@color/black"
        android:textSize="29sp" />





</RelativeLayout>

